# supply-chain-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  agent.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: base.yaml  local.yaml
document/: copilot-meta-config.md  copliot架构总结.md  harness-目录与脚手架说明.md  vibe-coding-最佳实践与核心思路.md  三大智能工程引擎.md  自定义skill 说明及定义操作步骤详解.md
document/copilot上下文总结/: 1. 元数据说明.md  copilot-chat-debug-view.md  copilot-上下文加载机制总结.md
document/copilot上下文总结/2. 系统请求/: 1.声明限制.md  2.系统请求说明.md  3.工具使用说明.md  4.应用补丁说明.md  5.Notebook 说明.md  6.内存说明.md  7. 输出格式.md  8. 自定义说明.md  System请求详解.md
document/copilot上下文总结/3. 用户请求/: user.md
harness/: test_harness.py
memories/: user-profile.md
memories/repo/: project-overview.md
sales_forecast/: __init__.py  __main__.py
sales_forecast/cli/: commands.py
sales_forecast/config/: __init__.py  loader.py  paths.py  schema.py
sales_forecast/data/: make_dataset.py
sales_forecast/features/: build_features.py
sales_forecast/models/: __init__.py  evaluate.py  predict.py  train.py
sales_forecast/utils/: helpers.py
sales_forecast/visualization/: plots.py
src/data/: make_dataset.py
src/features/: build_features.py
src/visualization/: visualize.py
template/: create_ml_project.py  init.md  ml-project-scaffold.md  project_structur.md  setup.py
tests/: conftest.py  test_config.py  test_data.py  test_features.py  test_models.py
